--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -18,7 +18,19 @@
   width: 48rem;
   margin: 8rem auto;
 }
-
+.primary {
+  color: inherit;
+  text-transform: uppercase;
+  padding: 0.8rem 1.6rem;
+  font-family: inherit;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 700;
+  background-color: var(--color-brand--2);
+  color: var(--color-dark--1);
+}
 .row {
   display: flex;
   flex-direction: column;
